# mlir-playground

./: .gitignore  README.md  setup.sh
llvm-project/mlir/examples/toy/: CMakeLists.txt
llvm-project/mlir/examples/toy/Ch4/: toyc.cpp
llvm-project/mlir/examples/toy/Ch5-opt/: CMakeLists.txt  toyc.cpp
llvm-project/mlir/examples/toy/Ch5-opt/include/toy/: CMakeLists.txt  Passes.h
llvm-project/mlir/examples/toy/Ch5-opt/mlir/: MyTransformPass.cpp
llvm-project/mlir/test/: CMakeLists.txt
toy_example/: my-transform.sh  toy
toy_example/dumps/: ast-dump.sh  mlir-dump.sh
toy_example/lowering/: affine-lowering.sh
toy_example/optimize/: inline_and_shapeinfer.sh  transpose_opt.sh
